workloads/gotify/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  serviceName: "gotify"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: gotify
        image: ghcr.io/gotify/server:2.9.1@sha256:a3af47067ce6aad76aadf5ba32d6ddfecd1ae576a961359f039fd1831e8b7652
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: gotify-data
          mountPath: /app/data
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: gotify-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 1Gi
