workloads/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
spec:
  ports:
  - port: 80
    name: web
  selector:
    app.kubernetes.io/name: gotify
