workloads/gotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: gotify
  namespace: gotify
spec:
  ingressClassName: nginx
  rules:
  - host: push.rre.nu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gotify
            port:
              number: 80
  tls:
  - hosts:
    - push.rre.nu
    secretName: gotify
